# playground

./: .gitignore
asio/src/: CMakeLists.txt  conanfile.txt  main.cpp
bash/: arg_manip.bash  arguments.bash  array.bash  array_as_argument.bash  array_check.bash  associative-array.bash  check-undefined-var  construct_array.bash  declare.bash  default_value.bash  double_deref.bash  expansion.bash  fork.bash  function.bash  heredoc.bash  output.bash  parse-argument.bash  perl-in-if.bash  read-only.bash  read.bash  read_config.bash  regex.bash  return_code.bash  return_value_from_function.bash  scope.bash  sete  source.bash  splat  split.bash  subproc-redirect.bash  substitution.bash  swap  trim.bash
bitbake/: .gitignore
c/: fractional_baud_rate.c  hello_world.c  size.c  wrap.c
can/: toggle-schmier
cmake/: .gitignore  CMakeLists.txt  cmake_language.cmake  cmake_parse_arguments.cmake  cmake_path.cmake  execute_process.cmake  function.cmake  generator_expression.cmake  if.cmake  include.cmake  internal.cmake  json.cmake  length.cmake  listings.json  matches.cmake  parse.cmake  parse_catch_output.cmake  query.query  regex.cmake  set.cmake  variable_expansion.cmake  variables.cmake
cmake-snippets/deb_generator/: CMakeLists.txt
cmake/custom_target/: CMakeLists.txt  CMakePresets.json
cmake/custom_target/subdir/: CMakeLists.txt
cmake/fetch-content-with-patch/: CMakeLists.txt  ccache.patch
cmake/resource_lock/: CMakeLists.txt
cmake/river/: CMakeLists.txt
cmake_genfile/: CMakeLists.txt  gen.c  main.cpp
cmake_genfile/.cache/clangd/index/: gen.c.E0EE4B1206F03290.idx  main.cpp.DDF8719BF0BC9097.idx
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  chrono_duration.cpp  chrono_duration.cpp.gcov  chrono_duration.gcda  chrono_duration.gcno  compile_commands.json  enum_template_friend.cpp  float_as_nttp.cpp  indexed_parameter_pack.cpp  justfile  macro.cpp  main.cpp  monster_generated.h  nttp.cpp  pyproject.toml  pyrightconfig.json  sml.cpp  template_template.cpp  union.cpp
cpp.old/: .gitignore  CMakeLists.txt  CMakePresets.json  anonymous_struct.cpp  compiler_macro.cpp  member_variable_capture_by_ref.cpp  nttp.cpp  unix_domain_socket.cpp
cpp.old/dynamic_library/: CMakeLists.txt  lib.hpp  main.cpp
cpp/data/conan/: x86_64.conf
cpp/dynamic_library/: lib.cpp  lib_a.cpp
cpp/src/: CMakeLists.txt  arrow_star.cpp  benchmark.cpp  can.cpp  chrono.cpp  conanfile.py  conanfile.txt  conditional_variable.cpp  constructor.cpp  ctad.cpp  customization.cpp  epoll.cpp  error_code.cpp  error_code.impl.cpp  exec.cpp  fanotify.cpp  fchown.cpp  flatbuffers.cpp  flock.cpp  fmt_string_view.cpp  fn.cpp  fork.cpp  fstat.cpp  ftruncate.cpp  function.cpp  inja.cpp  inotify.cpp  json.cpp  lambda.cpp  lely-core.cpp  lely.cpp  macro_map.cpp  macro_map.hpp  macro_map_gen.py  macros.cpp  main.cpp  megameta.cpp  member_count.cpp  member_function.cpp  member_ptr.cpp  (+28 more)
cpp/tools/: random
cpp_coroutine/: CMakeLists.txt  main.cpp
cppfront/: cpp2util.h  enum.cpp  enum.cpp2  main.cpp  main.cpp2  variadics.cpp  variadics.cpp2
d2/: input.d2
digitransit/: config  request.graphql
fastapi-pg/: hello.py  pyproject.toml
gcov/: CMakeLists.txt  lib.cpp  lib.cpp.gcov  main.cpp  main.cpp.gcov
gzip/cpp/src/: CMakeLists.txt  conanfile.py  main.cpp
gzip/python/: README.md  pyproject.toml
gzip/python/src/gzip_sandobx/: gen.py  receiver.py  sender.py
html/: blink.html
idris/: Prims.idr  hello.idr
ipc/: CMakePresets.json
js/: app.js  array.js  index.js  proxy.js  regex.js  spread_and_list.js
jupyter-lab/: pyproject.toml
lua/: assign.lua  case_switch.lua  clock_tree.lua  fn.lua  foreach.lua  function.lua  if.lua  match.lua  metatable.lua  multiple_return.lua  pattern.lua  require.lua  sandbox.lua  sandbox2.lua  string_format.lua  table.lua  table_insert.lua  type.lua  unpack.lua
lua5.4/: .luarc.json  close.lua
luajit/: .luarc.lua  bit.lua  compare.lua  concat.lua  inheritance.lua  insert.lua  match.lua  peg.lua  strip.lua
make/: Makefile
new-python/: pyproject.toml
node/: networkInterfaces.mjs  promise.js
nvim/: luasnip.lua  telescope.lua  tree-sitter-playground.lua
pfr/src/: CMakeLists.txt  conanfile.py  main.cpp
python/: .pdm-python  cache_dict.py  decorator.py  default-args.py  hash-password.py  kwargs.py  match.py  message_content.cpp  message_content.cpp.jinja  messages.json  peg.py  predicate.py  pyproject.toml  pyserde.py  sb_msgpack.py  sqlite-dataclass.py  template.py  tree-sitter-cmake.py  typing_1.py  unpack.py  validate_types.py  with_statement.py  yield.py  zmqtest.py
python/github/: pyproject.toml
python/github/github/: __init__.py
python/github/tests/: test_github.py
python/python/: __init__.py
pyzmq/: pyproject.toml
pyzmq/tests/: test_zmq.py
reflect-cpp/src/: CMakeLists.txt  conanfile.py  main.cpp
rust/: Cargo.toml
sml/src/: CMakeLists.txt  any.cpp  child-on-exit.cpp  child-rejected.cpp  conanfile.py  duplicate-deps.cpp  entry-exit.cpp  immediate.cpp  queued-events.cpp  sml.cpp
sml2/src/: CMakeLists.txt  entry-exit.cpp  main.cpp
sol2/src/: CMakeLists.txt  conanfile.py  main.cpp
vendor-list/: README.md  pyproject.toml
vendor-list/src/vendor_list/: __init__.py
zeromq/src/: CMakeLists.txt  client.cpp  conanfile.txt  server.cpp  taskvent.cpp  taskwork.cpp  version.cpp
zeromq/src/chapter1/: CMakeLists.txt  tasksink.cpp  wuclient.cpp  wuserver.cpp
zeromq/src/chapter2/: CMakeLists.txt  interrupt.cpp  msgqueue.cpp  mspoller.cpp  msreader.cpp  mtrelay.cpp  mtserver.cpp  psenvpub.cpp  psenvsub.cpp  rrbroker.cpp  rrclient.cpp  rrworker.cpp  syncpub.cpp  syncsub.cpp  tasksink2.cpp  taskwork2.cpp  wuproxy.cpp
zeromq/src/chapter3/: CMakeLists.txt  identity.cpp  lbbroker.cpp  rtdealer.cpp  rtreq.cpp
zeromq/src/chapter4/: CMakeLists.txt  lpclient.cpp  lpserver.cpp  mdcliapi.cpp  ppqueue.cpp  ppworker.cpp  spqueue.cpp  spworker.cpp
zmq/cpp/src/: CMakeLists.txt  barebone.cpp  conanfile.py  liveness-check.cpp  main.cpp  push-pull.cpp  req-rep.cpp
zmq/python/: hello.py  pyproject.toml
zmq/python/src/python/: __init__.py  build-connect.py
(+160 files in other folders)
