cmake_minimum_required(VERSION 3.18)
project(sandbox LANGUAGES CXX)

macro(add_snippet target)
  add_executable(${target} ${target}.cpp)
  target_compile_features(${target} PRIVATE cxx_std_20)
  target_compile_options(${target} PRIVATE -fsanitize=undefined -fsanitize-undefined-trap-on-error)
endmacro()

add_snippet(compiler_macro)
add_snippet(sml)
add_snippet(member_variable_capture_by_ref)
add_snippet(anonymous_struct)
add_snippet(chrono_duration)
add_snippet(unix_domain_socket)
add_snippet(nttp)
add_snippet(union)
add_snippet(macro)

add_subdirectory(dynamic_library)
