[project]
name = "sandbox"
version = "0.1.0"
description = ""
authors = [{ name = "Uy Ha", email = "hchanuy@gmail.com" }]
dependencies = [
    "Jinja2>=3.1.2",
    "tree-sitter>=0.20.2",
    "disutils>=1.4.32.post2",
    "setuptools>=68.2.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
