[project]
name = "sandbox"
version = "0.1.0"
description = ""
authors = [{ name = "Uy Ha", email = "hchanuy@gmail.com" }]
dependencies = [
    # "pyzmq>=26.2.1",
]
requires-python = ">=3.14"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
