[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
indicatif = "0.16"
mime = "0.3"
http = "0.2"
rusqlite = { version = "0.26", features = ["bundled"] }
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
xz2 = "0.1"
