[project]
name = "python"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Uy Ha", email = "hchanuy@gmail.com"},
]
dependencies = [
    "pyzmq>=25.1.2",
    "msgpack>=1.0.8",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
